# rust-dynamic-dns-updater

./: Cargo.toml  README.md
src/: cli.rs  cmd.rs  error.rs  finders.rs  main.rs  providers.rs
src/cmd/: update.rs
src/finders/: error.rs  ipify.rs
src/providers/: duckdns.rs  error.rs
