[package]
name = "dynamic-dns-updater"
version = "0.1.0"
authors = ["Ivan Fraixedes <ivan@fraixed.es>"]
edition = "2018"
description = "command line tool for updating IP addresses of several dynamic DNS providers"
license-file = "LICENSE"
keywords = ["dynamic-dns"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "~2.2.0"
lazy_static = "~1.4.0"
regex = "~1.4.2"
isahc = "~1.1.0"
async-std = "1.8.0"

[dev-dependencies]
wiremock = "~0.5.1"
