[package]
name = "dynamic-dns-updater"
version = "0.1.0"
authors = ["Ivan Fraixedes <ivan@fraixed.es>"]
edition = "2021"
description = "command line tool for updating IP addresses of several dynamic DNS providers"
license-file = "LICENSE"
keywords = ["dynamic-dns"]
categories = ["command-line-utilities"]

[dependencies]
http = "~0.2.4"
isahc = "~1.5.1"
lazy_static = "~1.4.0"
regex = "~1.4.2"
url = "~2.2.0"

[dev-dependencies]
tokio = { version = "1.13.0", features = ["macros"] }
wiremock = "~0.5.8"
rand = { version = "0.8.3", default-features = false, features = [ "getrandom", "small_rng"] }
